# investigation-poc

./: .dockerignore  .gitignore  .mcp.json  DEMO.md  Dockerfile  Dockerfile.adk-agent  Dockerfile.alertmanager-mcp  Dockerfile.loki-mcp  Dockerfile.shadow  Dockerfile.slack-bot  Dockerfile.slack-mcp  Jenkinsfile  Makefile  PRE_FORK_PLAN.md  README.md  pyproject.toml  slack-app-manifest-a2a.yaml
PLANS/: adr-reconciliation-plan.md
claude-code-marketplace/: README.md
desktop-extension/: .mcpbignore  ADMIN_HANDOFF.md  README.md  manifest.json  package-lock.json  package.json
desktop-extension-reference/: manifest.json  package-lock.json  package.json
docs/: interface-contract.md  planner-led-transition-plan.md  prometheus-kind-checklist.md
k8s/: agent.yaml  alertmanager-mcp-deployment.yaml  alertmanager-mcp-serviceaccount.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  guidelines-configmap.yaml  investigation-remotemcpserver.yaml  investigation-skill-configmap.yaml  kubernetes-mcp-clusterrole.yaml  kubernetes-mcp-clusterrolebinding.yaml  kubernetes-mcp-deployment.yaml  kubernetes-mcp-service.yaml  kubernetes-mcp-serviceaccount.yaml  kubernetes-remotemcpserver.yaml  kustomization.yaml  loki-mcp-deployment.yaml  loki-mcp-service.yaml  loki-mcp-serviceaccount.yaml  mcp-deployment.yaml  mcp-service.yaml  modelconfig.yaml  prometheus-mcp-deployment.yaml  prometheus-mcp-service.yaml  prometheus-mcp-serviceaccount.yaml  prometheus-remotemcpserver.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml  slack-credentials.secret.example.yaml
(+230 files in other folders)
