[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investigation-service"
version = "0.1.0"
description = "FastAPI incident investigation service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "mcp>=1.26.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "PyYAML>=6.0.0",
  "langgraph>=1.0.10,<2.0.0",
  "langchain-core>=0.3.0",
  "kagent-core==0.7.23",
  "kagent-langgraph>=0.1.0",
  "opentelemetry-instrumentation-fastapi==0.59b0",
  "opentelemetry-instrumentation-httpx==0.59b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
investigation-shadow-runtime = "investigation_shadow_runtime.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
